[project]
name = "aiml-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.102.0",
    "fastapi>=0.136.1",
    "inngest>=0.5.18",
    "llama-index-core>=0.14.21",
    "llama-index-readers-file>=0.6.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "streamlit>=1.57.0",
    "uvicorn>=0.46.0",
]
